Attendance validation and Trainee Draft submit flow